python-cinderclient (1:1.0.4-1) unstable; urgency=low

  * Uploading to unstable.
  * New upstream release.
  * Added export OSLO_PACKAGE_VERSION=$(VERSION) in debian/rules.

 -- Thomas Goirand <zigo@debian.org>  Mon, 13 May 2013 09:53:36 +0000

python-cinderclient (1:1.0.2-1) experimental; urgency=low

  * New upstream release.
  * Removes all old patches which aren't needed anymore.

 -- Thomas Goirand <zigo@debian.org>  Sat, 23 Feb 2013 02:36:05 +0800

python-cinderclient (1:0.2-1) experimental; urgency=low

  * First debian release (Closes: #687518)

 -- Thomas Goirand <zigo@debian.org>  Sat, 02 Feb 2013 13:43:12 +0000