@@ -23,5 +23,9 @@ override_dh_install:
 %:
 	dh $@  --with python2
 
+ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 override_dh_auto_test:
-	./run_tests.sh -N -P
+	for i in `pyversions -s` ; do \
+		$$i -m subunit.run discover -t ./ ./tests ; \
+	done
+endif
